# refl_struct

./: .gitignore  CMakeLists.txt  README.md
include/: refl_struct.hpp
tests/: test_bigstruct.cpp  test_macro_pair.cpp  test_refl_struct.cpp
